--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .container-fluid {
-    max-width: 1300px;
+    max-width: 1400px;
 }
 
 /* nav {
@@ -8,7 +8,7 @@
 } */
 
 .container {
-    max-width: 1000px;
+    max-width: 1150px;
 }
 
 p {
@@ -19,6 +19,11 @@ p {
 h5 {
     font-size: 18px;
     font-weight: 700;
+}
+
+button {
+    font-size: 16px !important;
+    font-weight: 500 !important;
 }
 
 .navbar-brand {
@@ -37,6 +42,16 @@ h5 {
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
+    transition: all .2s ease-in-out;
+}
+
+.nav-item a:hover {
+    color: #444444 !important;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    transform: scale(1.1);
 }
 
 .linkedinIcon {
@@ -49,7 +64,7 @@ h5 {
 }
 
 #titleSection {
-    margin-top: 11rem;
+    margin-top: 7rem;
 }
 
 #toolsSection {
@@ -57,11 +72,11 @@ h5 {
 }
 
 #omMigSection {
-    margin-top: 10rem;
+    margin-top: 8rem;
 }
 
 #projectsSection {
-    margin-top: 10rem;
+    margin-top: 8rem;
 }
 
 .textbox {
@@ -82,7 +97,7 @@ h5 {
 #header {
     font-size: 4rem;
     font-weight: 800;
-    box-shadow: 0px 14px 19px rgba(0, 0, 0, 0.04);
+    /*     box-shadow: 0px 14px 19px rgba(0, 0, 0, 0.04); */
 }
 
 #headerTitle {
@@ -90,9 +105,15 @@ h5 {
     font-weight: 800;
 }
 
+.toolimage {
+    height: 32px;
+    width: auto;
+    transition: all .2s ease-in-out;
+}
+
 
 .toolimage:hover {
-    transform: scale(1.1);
+    transform: scale(1.5);
 }
 
 .projecticons {
@@ -105,7 +126,6 @@ h5 {
     width: auto;
     height: 300px;
     overflow: hidden;
-    cursor: pointer;
     border-radius: 20px;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
 
@@ -125,11 +145,11 @@ h5 {
 }
 
 .mobile_frame {
+    margin-left: 1rem;
     min-width: 50px;
     width: 50px;
     height: 300px;
     overflow: hidden;
-    cursor: pointer;
     border-radius: 10px;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
 
@@ -139,13 +159,13 @@ h5 {
     object-fit: cover;
     width: 100%;
     transform: translateY(0);
-    transition: 5s ease-out;
+    transition: 2s ease-out;
 }
 
 .mobile_frame:hover img {
     object-fit: cover;
-    transform: translateY(calc(-100% + 400px));
-    transition: 5s ease-out;
+    transform: translateY(calc(-100% + 300px));
+    transition: 3s ease-out;
 }
 
 .forminput {
@@ -164,7 +184,30 @@ h5 {
 }
 
 footer {
-    box-shadow: 0px -4px 19px rgba(0, 0, 0, 0.04);
+    /*  box-shadow: 0px -4px 19px rgba(0, 0, 0, 0.04); */
+    margin-top: 7rem;
+}
+
+.projectcontainer {
+    background-color: white;
+    box-shadow: 0px 0px 19px rgba(0, 0, 0, 0.10);
+    padding: 2rem;
+    border-radius: 20px;
+    margin-top: 3rem;
+}
+
+.toolscontainer {
+    background-color: white;
+    box-shadow: 0px 0px 19px rgba(0, 0, 0, 0.10);
+    padding: 2rem;
+    border-radius: 20px;
+    margin-top: 3rem;
+}
+
+.featurette-divider {
+    align-self: center;
+    width: 1150px;
+    margin-bottom: 4rem;
 }
 
 
@@ -181,7 +224,7 @@ footer {
     }
 
     #toolsSection {
-        margin-top: 6rem;
+        margin-top: 1rem;
     }
 
     #omMigSection {
